# dyadikos

./: .gitignore  .woodpecker.yml  Cargo.toml  cog.toml
crates/core/: Cargo.toml
crates/core/examples/: quad.rs
crates/core/src/: lib.rs  mesh.rs  native.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs  transform.rs
crates/shader_graph/: Cargo.toml
crates/shader_graph/src/: graph.rs
src/: lib.rs  main.rs  mesh.rs  shader.rs
