[package]
name = "dyadikos"
version = "0.0.1"
edition = "2021"

[dependencies]
ndarray = { version = "0.15.4", features = ["serde", "rayon"] }
serde = { version = "1.0.137", features = ["derive"] }
vulkano = "0.29.0"
vulkano-win = "0.29.0"
winit = "0.26.1"
anyhow = "1.0.57"
bytemuck = "1.9.1"
egui_winit_vulkano = "0.17.0"
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
hecs = { version = "0.7.6", features = ["row-serialize", "serde"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
shaderc = "0.7.4"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
