[package]
name = "dyadikos-core"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.60"
tracing = "0.1.36"
dyadikos-math = { path = "../math" }
bytemuck = { version = "1.11.0", features = ["derive"] }
typed-arena = "2.0.1"
wgpu = "0.13.1"
nalgebra = "0.31.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.27.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]

[dev-dependencies]
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tokio = { version = "1.20.1", features = ["full"] }

[features]
default = []
