[package]
name = "dyadikos-shader-graph"
version = "0.0.1"
edition = "2021"
license = "MIT"

[lib]
name = "dyadikos_graph"
path = "src/lib.rs"

[dependencies]
ndarray = "0.15.6"
petgraph = "0.6.3"
shaderc = { version = "0.8.2", optional = true }
serde = { version = "1.0.164", features = ["derive"], optional = true }

[features]
default = []
compilation = ["shaderc"]
serialize = ["serde", "petgraph/serde-1"]
